--- a/Flask Deployed App/templates/contact-us.html
+++ b/Flask Deployed App/templates/contact-us.html
@@ -17,26 +17,21 @@ Contact Us
     <div class="col">
         <div class=" p-5 bg-white shadow rounded-lg" style="height: 95%;">
             <center>
-                <h3>Manthan Bhikadiya</h3>
-                <p class="lead" style="font-weight: 350;">Hi, I am Manthan Bhikadiya. Currently Pursuing Bachelors in
-                    Information
-                    Technology.My Main Focus is on Machine Learning, Deep Learning and Artificial Intelligence.I am Also
-                    Interested in Blockchain and Flutter App Development.</p>
+                <h3>Amrutha H M</h3>
+                <p class="lead" style="font-weight: 350;">Hi, I am Amrutha H M. Currently Pursuing Bachelors in
+                    Artificial Intelligence and Machine Learning.My Main Focus is on Machine Learning, Deep Learning and Artificial Intelligence.</p>
             </center>
             <div>
                 <h5>Social Media Handles :</h5><br>
-                <a target="_blank" href='mailto:bhikadiyamanthan@gmail.com'><img
+                <a target="_blank" href='ammuhiremath.09@gmail.com'><img
                         src="https://image.flaticon.com/icons/png/512/281/281769.png" height="40" width="40"></a> :
-                bhikadiyamanthan@gmail.com<br><br>
-                <a target="_blank" href='manthan-bhikadiya.medium.com'><img
-                        src="https://cdn4.iconfinder.com/data/icons/social-media-2210/24/Medium-512.png" height="44"
-                        width="44"></a> : manthan-bhikadiya<br><br>
-                <a target="_blank" href='https://github.com/manthan89-py'><img
+                ammuhiremath.09@gmail.com<br><br>
+                <a target="_blank" href='https://github.com/Amruthahiremath09'><img
                         src="https://image.flaticon.com/icons/png/512/25/25231.png" height="40" width="40"></a> :
-                manthan89-py<br><br>
-                <a target="_blank" href='https://www.linkedin.com/in/manthanbhikadiya'><img
+                Amruthahiremath09<br><br>
+                <a target="_blank" href='https://www.linkedin.com/in/amrutha-hm'><img
                         src="https://image.flaticon.com/icons/png/512/174/174857.png" height="40" width="40"></a> :
-                manthanbhikadiya<br>
+                amrutha-hm<br>
             </div>
         </div>
     </div>
@@ -44,23 +39,21 @@ Contact Us
     <div class="col">
         <div class=" p-5 bg-white shadow rounded-lg" style="height: 95%;">
             <center>
-                <h3>Krishna Baldaniya</h3>
-                <p class="lead" style="font-weight: 350;">Hi, I am Krishna Baldaniya. I am an entrepreneur, currently
-                    co-founder at KrsikX India LLP which is an Agri-Tech Startup. Pursuing bachelors in Information
-                    Technology. My main focuses on the technical side are Cloud computing and mobile App development.
+                <h3>Aishwarya Mattikalli</h3>
+                <p class="lead" style="font-weight: 350;">Hi, I am Aishwarya Mattikalli. I am Currently Pursuing Bachelors in
+                    Computer Science and Engineering. My Main Focus is on Machine Learning, Deep Learning and Artificial Intelligence.
                 </p>
             </center>
             <div>
                 <h5>Social Media Handles :</h5><br>
-                <a target="_blank" href='mailto:krishna.baldaniya93@gmail.com'><img
+                <a target="_blank" href='aishwaryamattikalli@gmail.com'><img
                         src="https://image.flaticon.com/icons/png/512/281/281769.png" height="40" width="40"></a> :
-                krishna.baldaniya93@gmail.com<br><br>
-                <a target="_blank" href='https://www.instagram.com/krishna.baldaniya/'><img
-                        src="https://image.flaticon.com/icons/png/512/174/174855.png" height="44" width="44"></a> :
-                krishna.baldaniya<br><br>
-                <a target="_blank" href='https://www.linkedin.com/in/krishna-baldaniya-5547381a1/'><img
+                aishwaryamattikalli@gmail.com<br><br>
+                 <a target="_blank" href='https://github.com/aishwaryamattikalli'><img
+                        src="https://image.flaticon.com/icons/png/512/25/25231.png" height="40" width="40"></a> : aishwaryamattikalli<br><br>
+                <a target="_blank" href='https://www.linkedin.com/in/aishwarya-m11/'><img
                         src="https://image.flaticon.com/icons/png/512/174/174857.png" height="40" width="40"></a> :
-                krishna-baldaniya<br>
+                Aishwarya-m11<br>
             </div>
         </div>
     </div>
